# ppx_record_updater

./: .gitignore  README.md  dune-project  dune-workspace  flake.nix  ppx_record_updater.opam
dev-tools.locks/ocaml-lsp-server/: lock.dune
dev-tools.locks/ocamlformat/: lock.dune
dune.lock/: lock.dune
lib/: dune  ppx_record_updater.ml
test/: dune
