(lang dune 3.18)

(name ppx_record_updater)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ppx_record_updater)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml ppxlib ppx_deriving)
 (tags (ppx)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
